src/app/rectangle-component/rectangle-component.component.scss
.rectangle {
    display: inline-block;
    height: 100%;
    width: 100%;
    border: 2px #d9e6eb solid;
    border-radius: 23px;
    border-width: 2px;
    background-color: #fafafa;
    font-family: 'Open Sans Semibold', Arial, sans-serif;
    font-size: 28px;
}

.answeredRight {
    border-color: #33C933;
    border-width: 2px;
}

.answeredWrong {
    border-color: #FB4343;
    border-width: 2px;
}

.recSelected {
    border-color: #0D7BAB;
    border-width: 4px;
}

.imgContainer {
    display: inline-block;
    text-align: center;
    width: 20%;
    height: 100%;
    vertical-align: middle;
}

.asnwerContainer {
    display: inline-block;
    text-align: center;
    vertical-align: middle;
    height: 100%;
    width: 50%;
}

.answerBlock {
    display: inline-block;
    width: 100%;
    height: 100%;
    text-align: left;
}

.imgElem {
    margin-top: 30%;
    margin-left: auto;
    display: block;
}

.textDiv {
    margin-top: 20%;
}

